// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon IconChatBubble should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  focusable={false}
  height="1em"
  isBidi={false}
  isSpin={false}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M46 4H2v30h14l8 10 8-10h14z"
    fill="none"
    stroke="#444"
    strokeLinecap="square"
    strokeMiterlimit="10"
    strokeWidth="2"
  />
  <path
    d="M14 14h20"
    data-color="color-2"
    fill="none"
    stroke="#444"
    strokeLinecap="square"
    strokeMiterlimit="10"
    strokeWidth="2"
  />
  <path
    d="M14 24h12"
    data-color="color-2"
    fill="none"
    stroke="#444"
    strokeLinecap="square"
    strokeMiterlimit="10"
    strokeWidth="2"
  />
</IconBase>
`;

exports[`Icon IconColorIncentives should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  focusable={false}
  height="1em"
  isBidi={false}
  isSpin={false}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M42 31.112a1 1 0 1 1 0-2c1.369 0 3-.52 3-3 0-1.637-1.018-1.973-1.222-2.025a1.008 1.008 0 0 1-.743-1.195.986.986 0 0 1 1.17-.758c.966.201 2.795 1.292 2.795 3.978 0 3.037-1.962 5-5 5z"
    fill="#D39B75"
  />
  <path
    d="M30 17H18.641c-2.36-4.749-6.848-4.682-8.97-3.944a1 1 0 0 0-.62 1.26l1.656 4.968A13.048 13.048 0 0 0 6.012 25H2a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h5.087A13.054 13.054 0 0 0 13 41.988V46a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3h6v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-4.012C39.813 39.98 43 35.25 43 30c0-7.168-5.832-13-13-13z"
    fill="#EEBC99"
  />
  <path
    d="M30 23h-8a1 1 0 1 1 0-2h8a1 1 0 1 1 0 2z"
    fill="#D39B75"
  />
  <circle
    cx="26"
    cy="6"
    fill="#EFD358"
    r="5"
  />
  <path
    d="M14 28c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2zm0-1.999h.01H14zm0 0h.01H14zm0 0h.01H14zm0 0h.01H14zm0 0h.01H14zM14 26h.01H14zm0 0h.01H14zm0 0h.01H14z"
    fill="#444"
  />
</IconBase>
`;

exports[`Icon IconOutlineChevronRight should render IconBase with custom-class 1`] = `
<svg
  aria-hidden="true"
  class="icon is-bidi custom-class"
  focusable="false"
  height="1em"
  viewbox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 4l20 20-20 20"
    fill="none"
    stroke="#444"
    stroke-linecap="square"
    stroke-miterlimit="10"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon IconOutlineChevronRight should shallow IconBase 1`] = `
<IconBase
  ariaLabel={null}
  className=""
  focusable={false}
  height="1em"
  isBidi={true}
  isSpin={false}
  viewBox="0 0 48 48"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 4l20 20-20 20"
    fill="none"
    stroke="#444"
    strokeLinecap="square"
    strokeMiterlimit="10"
    strokeWidth="2"
  />
</IconBase>
`;
